@@ -85,3 +85,7 @@ Other Changes
 
   Closes #1375
   Closes #330
+
+* The ``consider-iterating-dictionary`` checker now also considers membership checks
+
+  Closes #4069
