@@ -1,4 +1,4 @@
-# pylint: disable=missing-docstring, expression-not-assigned, too-few-public-methods, no-member, import-error, no-self-use, line-too-long, useless-object-inheritance, unnecessary-comprehension
+# pylint: disable=missing-docstring, expression-not-assigned, too-few-public-methods, no-member, import-error, no-self-use, line-too-long, useless-object-inheritance, unnecessary-comprehension, use-dict-literal
 
 from unknown import Unknown
 
@@ -36,3 +36,21 @@ DICT = {'a': 1, 'b': 2}
 COMP1 = [k * 2 for k in DICT.keys()] + [k * 3 for k in DICT.keys()]  # [consider-iterating-dictionary,consider-iterating-dictionary]
 COMP2, COMP3 = [k * 2 for k in DICT.keys()], [k * 3 for k in DICT.keys()]  # [consider-iterating-dictionary,consider-iterating-dictionary]
 SOME_TUPLE = ([k * 2 for k in DICT.keys()], [k * 3 for k in DICT.keys()])  # [consider-iterating-dictionary,consider-iterating-dictionary]
+
+# Checks for membership checks
+if 1 in dict().keys(): # [consider-iterating-dictionary]
+    pass
+if 1 in {}.keys(): # [consider-iterating-dictionary]
+    pass
+if 1 in Unknown().keys():
+    pass
+if 1 in Unknown.keys():
+    pass
+if 1 in CustomClass().keys():
+    pass
+if 1 in dict():
+    pass
+if 1 in dict().values():
+    pass
+if (1, 1) in dict().items():
+    pass
